--- a/app/globals.css
+++ b/app/globals.css
@@ -18,4 +18,8 @@
     .login_bg_gradient {
 background-image: linear-gradient(0deg,rgba(0,0,0,.8) 0,transparent 60%,rgba(0,0,0,.8)),url(/login__bg.jpg);
     }
+
+    .headerLink{
+        @apply cursor-pointer text-sm font-light text-[#e5e5e5] transition duration-[.4s] hover:text-[#b3b3b3]
+    }
 }
